# zigzagi

./: .gitignore  CLAUDE.md  DESIGN.md  PRD.md  dev.sh  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e683cde1462_word_candidates.py  7554bbffc1ee_puzzles_and_entries.py  96f9a975c80b_wordlist_entries_and_jobs.py  9e4855c67b64_add_created_at_to_puzzles.py  a35786bd100c_clue_events.py  b1d2e3f4a5c6_drop_live_date_unique.py  c7e8f9a0b1d2_wordpool_lemmas.py  (+3 more)
backend/app/: db.py  main.py  models.py  schemas.py  seed.py  worker.py
backend/scripts/: extend_edge_words.py  gen_templates.py  import_wordlist_csv.py
backend/tests/: conftest.py  test_admin_clues.py  test_admin_delete_puzzle.py  test_admin_fill.py  test_admin_fill_freeform.py  test_admin_fill_prefilled.py  test_admin_list_puzzles.py  test_admin_pool_add.py  test_admin_publish.py  test_admin_puzzles.py  test_admin_sourcing.py  test_admin_templates.py  test_admin_word_check.py  test_admin_wordlist.py  test_clues.py  test_entry_actions.py  test_from_article.py  test_gemini_check_word.py  test_import_wordlist_csv.py  test_models.py  test_play_bundle.py  test_play_check.py  test_play_list.py  test_play_reveal.py  test_play_today.py  test_pool.py  test_publish.py  test_runway.py  test_scrape.py  test_seed.py  test_seeds_provider.py  test_solver_jobs.py  test_solver_jobs_freeform.py  test_solver_prefilled.py  test_word_check.py  test_wordlist.py  test_wordlist_block.py  test_wordpool_select.py  test_worker.py  test_worker_promote.py
(+174 files in other folders)
